Photo Lib is sizing images correctly (no squish)

--- a/src/Components/Molecules/Library Picture/LibraryPicture.module.css
+++ b/src/Components/Molecules/Library Picture/LibraryPicture.module.css
@@ -13,13 +13,17 @@
 
 #libraryPicture {
    
-    width: auto;
+    max-width: 100%;
     height: 100%;
+    width: auto; 
+    object-fit: contain;
+
 }
 
 #imgContainer {
     position: relative;
     height: 100%;
+    width: 100%;
     display: flex;
     justify-content: center;
 }
